crates/rlf-macros/tests/fail/numeric_term_key.rs
use rlf::rlf;

rlf! {
    card = { 1: "one card", other: "cards" };
}

fn main() {}
